LifeCycle Management for Monocular ORBSLAM3
Problem
=======
1. Implemented lifecycle management do not conform to ROS2 lifecycle
   management API

Solution
========
1. Removed morbslam build instructions from `CMakeLists.txt`
2. Added a launch directory in the repository for keeping
   `orbslam3.launcgh.py`
3. Added lifecycle management dependencies in `CMakeLists.txt`
4. Renamed `class MonocularSlamNode` to `class VisualSlamNode`
5. Added lifecycle management method in `class VisualSlamNode` in
   `include/slam/CMakeLists.txt`
6. Moved `VisualSlamNode::mpSlamSettingsFilePath` in
   `include/slam/monocular.hpp` to `SlamNode::mpSlamSettingsFilePath`
   in `include/slam/slam.hpp`
7. Removed `VisualSlamNode::InitialiseSlamNode` in
   `include/slam/monocular.hpp` as this has been deprecated
8. Removed `SlamNode::InitialiseSlamNode`  in `include/slam/node.hpp`
9. Removed `SlamNode::mpSlamStartupService` in `include/slam/node.hpp`
10. Added `CallBackReturn` in `include/slam/node.hpp`
11. Removed `MonoORBSLAM3::InitialiseSlam` as this has been deprecated
12. Updated `MonoORBSLAM3::Shutdown` for appropriate cleanup or ORB_SLAM3
   pointer
13. Updated definition of constructor of `class MonoORBSLAM3` to include
   settings file path, vocabulary file path and setup CameraType
14. Removed `Slam::InitialiseSlam` in `include/slam/slam.hpp` as
   this has been deprecated
15. Added a null pointer check when setting frame map point
   publication callback in `ORB_SLAM3::System::SetFrameMapPointCallback`
   in `orb_slam3/src/System.cc`
16. Updates `ORB_SLAM3::System::ShutDown` in `orb_slam3/src/System.cc`
   to cleanup viewer, local mapping, and loop closure threads
17. Added cv window cleanup at the end of `ORB_SLAM3::Viewer::Run()`
   to shutdown open cv image viewer when ORB\_SLAM3 is shutdown
18. Added lifecycle management dependencies in `package.xml`
19. Updated `class VisualSlamNode` in `src/monocular.cpp` to
   implement lifecycle management.
20. Updated node class name in 

--- a/package.xml
+++ b/package.xml
@@ -30,6 +30,8 @@
   <build_depend>octomap</build_depend>
   <build_depend>octomap_ros</build_depend>
   <build_depend>octomap_msgs</build_depend>
+  <build_depend>rclcpp_lifecycle</build_depend>
+  <build_depend>lifecyle_msgs</build_depend>
 
   <!-- As suggested by the official tutorial, add your custom message interfaces as follows -->
   <depend>custom_interfaces</depend>
@@ -54,6 +56,8 @@
   <exec_depend>octomap</exec_depend>
   <exec_depend>octomap_ros</exec_depend>
   <exec_depend>octomap_msgs</exec_depend>
+  <exec_depend>rclcpp_lifecycle</exec_depend>
+  <exec_depend>lifecyle_msgs</exec_depend>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
